--- a/ru/toloka-apps/api/ref.yaml
+++ b/ru/toloka-apps/api/ref.yaml
@@ -159,6 +159,7 @@ paths:
             type: string
 
       summary: Получить список проектов
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       responses:
         '200':
           content:
@@ -171,6 +172,7 @@ paths:
       tags:
         - app-project
       summary: Создать новый проект
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       requestBody:
         description: Параметры нового проекта.
         required: true
@@ -191,6 +193,7 @@ paths:
       tags:
         - app-project
       summary: Получить информацию о проекте
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
       - name: app_project_id
         in: path
@@ -256,7 +259,11 @@ paths:
       tags:
         - app-project
       summary: Архивировать проект
-      description: Проект переходит в статус ARCHIVE.
+      description: >-
+        Проект переходит в статус ARCHIVE.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/archive" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -274,7 +281,11 @@ paths:
       tags:
         - app-project
       summary: Разархивировать проект
-      description: Проект переходит в последний статус, который был перед архивированием.
+      description: >-
+        Проект переходит в последний статус, который был перед архивированием.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/unarchive" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -292,6 +303,7 @@ paths:
       tags:
         - item
       summary: Получить информацию об элементе разметки
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/items/-item_id-" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -324,6 +336,7 @@ paths:
       tags:
         - item
       summary: Получить список всех элементов в проекте
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/items" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -468,6 +481,7 @@ paths:
       tags:
         - item
       summary: Добавить новый элемент в пакет данных
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/items" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -513,7 +527,11 @@ paths:
       tags:
         - item
       summary: Добавить несколько элементов в пакет данных
-      description: Не более 10 000 элементов в одном запросе.
+      description: >-
+        Не более 10 000 элементов в одном запросе.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/items/bulk" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -566,6 +584,7 @@ paths:
       tags:
         - batch
       summary: Получить список пакетов данных в проекте
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/batches" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -704,7 +723,14 @@ paths:
       tags:
         - batch
       summary: Создать новый пакет данных с первой пачкой элементов
-      description: Не более 10 000 элементов в запросе.
+      description: >-
+        Создает новый пакет данных с не более 10,000 элементов в запросе.
+
+
+        Устанавливает приоритет созданного пакета данных для разметки в соответствии со значением параметра `priority_order`: `ONE` (для наивысшего приоритета), `TWO`, `THREE`, `FOUR`, `FIVE` (для низшего приоритета, значение по умолчанию). Если значение `priority_order` не задано в запросе, пакет данных будет создан со значением `priority_order = FIVE`.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -758,7 +784,11 @@ paths:
       tags:
         - batch
       summary: Отправить пакет данных с синхронной загрузкой на разметку
-      description: Используется только для решений с синхронным протоколом.
+      description: >-
+        Отправляет пакет данных с синхронной загрузкой на разметку. Используется только для решений с синхронным протоколом.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/sync" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -772,7 +802,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/BatchCreateForm'
+              $ref: '#/components/schemas/BatchCreateSyncForm'
       responses:
         '200':
           content:
@@ -798,6 +828,7 @@ paths:
       tags:
         - batch
       summary: Получить информацию о пакете данных
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/batches/-batch_id-" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -828,7 +859,15 @@ paths:
     patch:
       tags:
         - batch
-      summary:  Обновить имя пакета данных
+      summary: Обновить пакет данных
+      description: >
+        Позволяет обновить имя и приоритет пакета данных.
+
+
+        Наивысший приорит получают пакеты данных со значением `priority_order` равным `ONE`. Элементы этого пакета данных будут отправлены в разметку первыми. Значение по-умолчанию — `FIVE`. Если значение `name` или `priority_order` не задано в запросе, они останутся без изменений.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#patch-/app-projects/-app_project_id-/batches/-batch_id-" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -843,7 +882,7 @@ paths:
           schema:
             type: string
       requestBody:
-          description: Параметры обновления имени пакета данных.
+          description: Параметры обновления пакета данных.
           required: true
           content:
             application/json:
@@ -868,7 +907,11 @@ paths:
       tags:
         - batch
       summary: Запустить обработку пакета данных
-      description: Запускается асинхронно.
+      description: >-
+        Запускается асинхронно.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/start" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -892,7 +935,11 @@ paths:
       tags:
         - batch
       summary: Остановить обработку пакета данных
-      description: Остановить обработку можно только для пакета данных в статусе **PROCESSING**.
+      description: >-
+        Остановить обработку можно только для пакета данных в статусе **PROCESSING**.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/stop" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -916,7 +963,11 @@ paths:
       tags:
         - batch
       summary: Возобновить обработку пакета данных
-      description: Возобновить обработку можно только для пакета данных в статусе **STOPPING** и **STOPPED**.
+      description: >-
+        Возобновить обработку можно только для пакета данных в статусе **STOPPING** и **STOPPED**.
+
+
+        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/resume" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_project_id
           in: path
@@ -999,6 +1050,7 @@ paths:
             type: string
 
       summary: Получить список шаблонов проектов (Apps)
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/apps" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       responses:
         '200':
           content:
@@ -1014,6 +1066,7 @@ paths:
       tags:
         - app
       summary: Информация о шаблоне проекта
+      description: <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Попробуйте <a href="https://toloka.ai/docs/api/apps-reference/#get-/apps/-app_id-" target="_blank" rel="noreferrer noopener">новый справочник API</a>:</strong> подробно расписанные параметры, примеры запросов и ответов, образцы кода на разных языках программирования.</p></div>
       parameters:
         - name: app_id
           in: path
@@ -1270,7 +1323,7 @@ components:
           description: ID пакета данных, к которому относится элемент разметки.
         status:
           type: string
-          description: Состояние обработки. NEW - новый, PROCESSING - обрабатывается, COMPLETED - обработка завершена, ERROR - ошибка при обработке, CANCELLED - обработка отменена, ARCHIVE - айтем архивирован, NO_MONEY - не хватает денег для обработки, и STOPPED - обработка остановлена клиентом.
+          description: Состояние обработки. `NEW` — новый, PROCESSING — обрабатывается, `COMPLETED` — обработка завершена, `ERROR` — ошибка при обработке, `CANCELLED` — обработка отменена, `ARCHIVE` — элемент данных архивирован, `NO_MONEY` — не хватает денег для обработки, и `STOPPED` — обработка остановлена клиентом.
           enum:
             - NEW
             - PROCESSING
@@ -1432,6 +1485,15 @@ components:
         items_per_state:
           type: object
           description: Статистика по количеству элементов в каждом состоянии.
+        priority_order:
+          type: string
+          description: Приоритет запуска пакета данных. `ONE` — самый высокий, элементы пакета данных с таким приоритетом будут отправлены в разметку первыми. По-умолчанию — `FIVE`.
+          enum:
+            - ONE
+            - TWO
+            - THREE
+            - FOUR
+            - FIVE
 
     BatchCreateForm:
       type: object
@@ -1444,15 +1506,47 @@ components:
           type: array
           items:
             type: object
-            description: Данные элемента разметки по схеме из шаблона проекта (input_spec). Не более 10 000 элементов в одном запросе.
+            description: Данные элемента разметки по схеме из шаблона проекта (`input_spec`). Не более 10 000 элементов в одном запросе.
+        priority_order:
+          type: string
+          description: Приоритет запуска пакета данных. `ONE` — самый высокий, элементы пакета данных с таким приоритетом будут отправлены в разметку первыми. Значение по-умолчанию — `FIVE`.
+          enum:
+            - ONE
+            - TWO
+            - THREE
+            - FOUR
+            - FIVE
 
-    BatchPatchForm:
+    BatchCreateSyncForm:
       type: object
       properties:
         name:
           type: string
           description: Название пакета данных.
-          example: Тестовый пакет данных.
+          example: Тестовый пакет данных
+        items:
+          type: array
+          items:
+            type: object
+            description: Данные элемента разметки по схеме из шаблона проекта (`input_spec`). Не более 10 000 элементов в одном запросе.
+
+    BatchPatchForm:
+      type: object
+      description: Форма частичного обновления пакета данных.
+      properties:
+        name:
+          type: string
+          description: Название пакета данных. Если не передано или пустое значение — название пакета данных не будет изменено.
+          example: Тестовый пакет данных
+        priority_order:
+          type: string
+          description: Приоритет запуска пакета данных. `ONE` — самый высокий, элементы пакета данных с таким приоритетом будут отправлены в разметку первыми. Если приоритет не задан в запросе — приоритет пакета данных будет оставлен без изменений.
+          enum:
+            - ONE
+            - TWO
+            - THREE
+            - FOUR
+            - FIVE
 
     ItemImport:
       type: object
