--- a/en/_includes/template-builder-toc.yaml
+++ b/en/_includes/template-builder-toc.yaml
@@ -24,6 +24,8 @@ items:
             href: ../template-builder/templates/object-recognition.md
           - name: Text recognition from an image (OCR)
             href: ../template-builder/templates/text-recognition.md
+          - name: Accessories recommendations
+            href: ../template-builder/templates/accessories-recommendations.md
       - name: Video
         items:
           - name: Video classification
