--- a/en/_includes/toloka-kit-toc.yaml
+++ b/en/_includes/toloka-kit-toc.yaml
@@ -29,8 +29,10 @@ items:
           href: ../toloka-kit/recipes/get-pools.md
         - name: Get pool details
           href: ../toloka-kit/recipes/get-pool-by-id.md
-        - name: Open and close pool
-          href: ../toloka-kit/recipes/open-close-pool.md
+        - name: Open pool
+          href: ../toloka-kit/recipes/open-pool.md
+        - name: Close pool
+          href: ../toloka-kit/recipes/close-pool.md
         - name: Archive pool
           href: ../toloka-kit/recipes/archive-pool.md
         - name: Clone pool
@@ -39,25 +41,27 @@ items:
           href: ../toloka-kit/recipes/change-pool-priority.md
         - name: Toloker selection
           items:
-          - name: Set overlay
+          - name: Set overlap
             href: ../toloka-kit/recipes/set-overlap.md
           - name: Filter Tolokers
             href: ../toloka-kit/recipes/filter-tolokers.md
-        - name: Skills
-          items:
-          - name: Get skills
-            href: ../toloka-kit/recipes/get-skills.md
-          - name: Create global skill
-            href: ../toloka-kit/recipes/create-skill.md
-          - name: Edit skill
-            href: ../toloka-kit/recipes/edit-skill.md
-          - name: List Tolokers with skills
-            href: ../toloka-kit/recipes/get-user-skills.md
-          - name: Remove skill from Toloker
-            href: ../toloka-kit/recipes/delete-user-skill.md
-        - name: Use quality control rules
-          href: ../toloka-kit/recipes/use-quality-control-rules.md
-      - name: Tasks
+          - name: Use quality control rules
+            href: ../toloka-kit/recipes/use-quality-control-rules.md
+      - name: Skills
+        items:
+        - name: Get skills
+          href: ../toloka-kit/recipes/get-skills.md
+        - name: Create skill
+          href: ../toloka-kit/recipes/create-skill.md
+        - name: Assign skill to Toloker
+          href: ../toloka-kit/recipes/assign-skill.md
+        - name: Edit skill
+          href: ../toloka-kit/recipes/edit-skill.md
+        - name: List Tolokers with skills
+          href: ../toloka-kit/recipes/get-user-skills.md
+        - name: Remove skill from Toloker
+          href: ../toloka-kit/recipes/delete-user-skill.md
+      - name: Tasks and task suites
         items:
         - name: Group tasks in task suites
           href: ../toloka-kit/recipes/create-task-suite.md
@@ -71,14 +75,14 @@ items:
           href: ../toloka-kit/recipes/change-task-overlap.md
       - name: Responses
         items:
-        - name: Get responses
+        - name: Get list of responses
           href: ../toloka-kit/recipes/get-responses.md
-        - name: Aggregate responses
-          href: ../toloka-kit/recipes/aggregate-responses.md
         - name: Accept responses
           href: ../toloka-kit/recipes/accept-responses.md
         - name: Reject responses
           href: ../toloka-kit/recipes/reject-responses.md
+        - name: Aggregate responses in pool
+          href: ../toloka-kit/recipes/aggregate-responses.md
         - name: Get list of files in responses
           href: ../toloka-kit/recipes/get-attachments.md
         - name: Download attachments
