--- a/presets.yaml
+++ b/presets.yaml
@@ -83,7 +83,7 @@ default:
   register: https://passport.toloka.ai/registration?mode=register&retpath=https://platform.toloka.ai
   restore: https://passport.toloka.ai/passport?mode=restore
   safari-mobile: https://support.apple.com/guide/safari-developer/simulate-responsive-web-content-apple-devices-dev84bd42758/mac
-  sandbox: https://sandbox.toloka.yandex.com/ru/for-requesters
+  sandbox: https://sandbox.toloka.yandex.com/for-requesters
   sandbox-for-performers: https://sandbox.toloka.yandex.com/tasks
   sandbox-profile: https://sandbox.toloka.yandex.com/requester/profile
   sandbox-profile-integration: https://sandbox.toloka.yandex.com/requester/profile/integration
