--- a/en/_includes/toloka-api-toc.yaml
+++ b/en/_includes/toloka-api-toc.yaml
@@ -1,6 +1,9 @@
 items:
   - name: Overview
     href: ../api/index.md
+  - name: API migration
+    href: ../api/api-migration.md
+    hidden: true
   - name: Accessing the API
     href: ../api/concepts/access.md
   - name: Quick start
